--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -321,8 +321,9 @@
                                     <wm-gridrow name="gridrow41">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn67">
                                             <wm-label padding="unset 0.5em" name="label8" caption="Inspection Outcomes are the results of an inspection."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label11_1" caption="By default, four outcomes are included that cannot be removed- &quot;Requested&quot;, &quot;Scheduled&quot;, &quot;Rescheduled&quot;, and &quot;Cancelled&quot;."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label12" caption="In addition to rescheduling or cancelling an inspection, an Inspector in the field can select any other outcome to an inspection you'd like to build, &quot;Pass&quot; is included by default."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label11_1" caption="By default, five outcomes are included that cannot be removed- &quot;Requested&quot;, &quot;Scheduled&quot;, &quot;Rescheduled&quot;, &quot;Cancelled&quot;, and &quot;Pass&quot;."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label12" caption="In addition to rescheduling or cancelling an inspection, an Inspector in the field can select any other outcome to an inspection you'd like to add."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label16" caption="If the &quot;Assess Fee&quot; option is selected, you will be presented the &quot;$&quot; (Fees) action icon where you can set outcome-specific fees."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow42_1">
@@ -365,7 +366,7 @@
                                                                         <wm-gridrow name="gridrow49">
                                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn68_2">
                                                                                 <wm-form-field name="assessFeeYn" displayname="Assess Fee" show="true" primary-key="false" generator="assigned" key="assessFeeYn" type="boolean" readonly="false" required="false"
-                                                                                widget="checkbox" defaultvalue="true" placeholder="" checkedvalue="true" uncheckedvalue="false" hint="If selected, this outcome will result in one or many fees being assessed. Click the &quot;Fees&quot; action icon on the Outcomes tab to add fees to this inspection outcome."></wm-form-field>
+                                                                                widget="checkbox" defaultvalue="false" placeholder="" checkedvalue="true" uncheckedvalue="false" hint="If selected, this outcome will result in one or many fees being assessed. Click the &quot;Fees&quot; action icon on the Outcomes tab to add fees to this inspection outcome."></wm-form-field>
                                                                             </wm-gridcolumn>
                                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn69_1">
                                                                                 <wm-form-field name="considerClosed" displayname="Consider Closed" show="true" primary-key="false" generator="assigned" key="considerClosed" type="boolean" readonly="false" required="false"
@@ -377,7 +378,7 @@
                                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn71_1">
                                                                                 <wm-form-field name="autoReInspection" displayname="Auto Re-Inspect" show="true" primary-key="false" generator="assigned" key="autoReInspection" type="boolean" readonly="false"
                                                                                 required="false" widget="checkbox" defaultvalue="false" hint="If this inspection is &quot;Consider Closed&quot; when it reaches this outcome, this setting will allow automatically rescheduling the inspection."
-                                                                                disabled="bind:!Widgets.liveformOutcome.formWidgets.considerClosed.datavalue"></wm-form-field>
+                                                                                disabled="bind:!Widgets.liveformOutcome.formWidgets.considerClosed.datavalue" checkedvalue="true" uncheckedvalue="false"></wm-form-field>
                                                                             </wm-gridcolumn>
                                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn72">
                                                                                 <wm-form-field name="daysToAutoReInspection" displayname="Days Until Re-Inspect" show="true" primary-key="false" generator="assigned" key="daysToAutoReInspection" type="integer"
@@ -396,8 +397,8 @@
                                                                         <wm-gridrow name="gridrow51_1">
                                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn73">
                                                                                 <wm-form-field name="sendEmail" displayname="Send Email" show="true" primary-key="false" generator="assigned" key="sendEmail" type="boolean" readonly="false" required="false"
-                                                                                widget="checkbox" defaultvalue="FALSE" hint="If selected, a system-generated email will be sent to the user who requested the inspection when the inspection enters this outcome."
-                                                                                placeholder=""></wm-form-field>
+                                                                                widget="checkbox" defaultvalue="false" hint="If selected, a system-generated email will be sent to the user who requested the inspection when the inspection enters this outcome."
+                                                                                placeholder="" checkedvalue="true" uncheckedvalue="false"></wm-form-field>
                                                                             </wm-gridcolumn>
                                                                             <wm-gridcolumn name="gridcolumn1" columnwidth="6">
                                                                                 <wm-form-field name="emailSubjectLine" displayname="Email Subject Line" show="true" primary-key="false" generator="assigned" key="emailSubjectLine" type="string" readonly="false"
