--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -10,6 +10,16 @@
                 </wm-composite>
             </wm-gridcolumn>
         </wm-gridrow>
+        <wm-gridrow name="gridrow4">
+            <wm-gridcolumn columnwidth="12" name="gridcolumn4">
+                <wm-composite name="composite4_2" accessroles="CXAdmin,MunicipalityEmployee,MunicipalityAdmin,InspectorManager,Inspector,CodeOfficer,CodeManager" padding="unset unset 2em unset">
+                    <wm-label class="col-md-3 control-label" name="label4" width="160px" caption="Select Type"></wm-label>
+                    <wm-container class="col-md-9" name="container4_1" width="240px">
+                        <wm-select name="selectType" dataset="Public,Internal" datavalue="Public"></wm-select>
+                    </wm-container>
+                </wm-composite>
+            </wm-gridcolumn>
+        </wm-gridrow>
         <wm-gridrow name="gridrow2">
             <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                 <wm-composite name="composite3" show="bind:!!Widgets.selectMunicipality.datavalue" padding="unset unset 2em unset">
